--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>lukew3</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <nav id="invisiblebox"></nav>
+    </body>
 </html>
