--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <nav id="invisiblebox"></nav>
+        <nav id="navbar">
+            <a href="">My Projects</a>
+        </nav>
+        <div class="aboutme">
+            <h1>Hi, I'm Luke</h1>
+            <p>I'm a 16 year old developer from Ohio</p>
+        </div>
     </body>
 </html>
