--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <nav id="navbar">
-            <a href="">My Projects</a>
+            <a href="./notepad.html">Notepad</a>
         </nav>
-        <div class="aboutme">
-            <h1>Hi, I'm Luke</h1>
-            <p>I'm a 16 year old developer from Ohio</p>
+ 
+        <div class="landingText">
+            <h1 class="myName">lukew3</h1>
+            <p class="myQuote">"insert quote here"</p>
+            <p class="mySlogan">"insert personal motto/slogan here"</p>
         </div>
     </body>
 </html>
