--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav id="navbar">
-            <a href="./notepad.html">Notepad</a>
+            <a href="./pages/notepad.html">Notepad</a>
         </nav>
  
         <div class="landingText">
