Added fonts and a background image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <title>lukew3</title>
         <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+
     </head>
     <body>
+        <div class="bgImage">&nbsp;</div>
+ 
         <nav id="navbar">
             <a href="./pages/notepad.html">Notepad</a>
         </nav>
