--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
         <div class="bgImage">&nbsp;</div>
  
         <nav id="navbar">
-            <a href="./pages/notepad.html">Notepad</a>
+            <ul class="navbar">
+                <li><a href="./pages/notepad.html">Notepad</a></li>
+            </ul>
         </nav>
  
         <div class="landingText">
             <h1 class="myName">lukew3</h1>
-            <p class="myQuote">"insert quote here"</p>
+            <p class="myQuote">"The ability to simplify means to eliminate the unnecessary so that the necessary may speak." - Hans Hoffman</p>
             <p class="mySlogan">"insert personal motto/slogan here"</p>
+        </div>
+        <div class="mainText">
+            <p>Hi, I'm Luke, a 16 year old aspiring software developer from Ohio</p>
         </div>
     </body>
 </html>
