--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
  
         <nav id="navbar">
             <ul class="navbar">
-                <li><a href="./pages/notepad.html">Notepad</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">My Projects</a></li>
+                <li><a href="./pages/notepad.html">Future Ideas</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
  
