Text is sized with rem units
Font size is always the same but words never overlap. The main problem right now is that they may be too big and overwhelming for viewing on mobile.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <nav id="navbar">
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">My Projects</a></li>
-                <li><a href="./pages/notepad.html">Future Ideas</a></li>
+                <li><a href="/pages/projects/projects.html">My Projects</a></li>
+                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
  
-        <div class="landingText">
+        <div class="landingTextBox">
             <h1 class="myName">lukew3</h1>
             <p class="myQuote">"The ability to simplify means to eliminate the unnecessary so that the necessary may speak." - Hans Hoffman</p>
-            <p class="mySlogan">"insert personal motto/slogan here"</p>
+            <p class="mySlogan">It's a work in progress</p>
         </div>
         <div class="mainText">
             <p>Hi, I'm Luke, a 16 year old aspiring software developer from Ohio</p>
