Added templates and made more pages

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>lukew3</title>
-        <link rel="stylesheet" href="/pages/projects/projects.css">
+        <link rel="stylesheet" href="/pages/about/about.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="/images/lukew3Logo1.png"/>
     </head>
@@ -14,18 +14,18 @@
             <ul class="navbar">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/pages/projects/projects.html">My Projects</a></li>
-                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>                    
+                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>                   
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
 
         <div class="titleContent">
-            <h1 class="title">Projects</h1>
-            <p class="description">What I've been up to</p>
+            <h1 class="title">About</h1>
+            <p class="description">Who I am and what I'm doing</p>
         </div>
         <div class="bodyContent">
-                <p>Patience is a virtue. More coming soon.</p>
+                <p>My name is Luke Weiler, I'm 16 years old and am learning programming for fun and for a career headstart</p>
         </div>
         
     </body>
