--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>lukew3</title>
-        <link rel="stylesheet" href="/pages/projects/projects.css">
+        <title>Contact</title>
+        <link rel="stylesheet" href="/pages/contact/contact.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="/images/lukew3Logo1.png"/>
     </head>
@@ -14,18 +14,17 @@
             <ul class="navbar">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/pages/projects/projects.html">My Projects</a></li>
-                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>                    
-                <li><a href="">About</a></li>
+                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>                    <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
 
         <div class="titleContent">
-            <h1 class="title">Projects</h1>
-            <p class="description">What I've been up to</p>
+            <h1 class="title">Contact</h1>
+            <p class="description">Get in touch with me!</p>
         </div>
         <div class="bodyContent">
-                <p>Patience is a virtue. More coming soon.</p>
+                <p>Email me at lukew25073@gmail.com or dm me on instagram @lukew3_</p>
         </div>
         
     </body>
