--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/pages/projects/projects.html">My Projects</a></li>
-                <li><a href="./pages/futureIdeas/ideas.html">Future Ideas</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/pages/futureIdeas/ideas.html">Future Ideas</a></li>
+                <li><a href="/pages/about/about.html">About</a></li>
+                <li><a href="/pages/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
  
