add Guidance Arrow

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -23,6 +23,7 @@
         <div class="titleContent">
             <h1 class="title">About</h1>
             <p class="description">Who I am and what I'm doing</p>
+            <div class="guidanceArrow"></div>
         </div>
         <div class="bodyContent">
                 <p>My name is Luke Weiler, I'm 16 years old and am learning programming for fun and for a career headstart</p>
