--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -23,6 +23,7 @@
         <div class="titleContent">
             <h1 class="title">Contact</h1>
             <p class="description">Get in touch with me!</p>
+            <div class="guidanceArrow"></div>
         </div>
         <div class="bodyContent">
                 <p>Email me at lukew25073@gmail.com or dm me on instagram @lukew3_</p>
