--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -23,6 +23,7 @@
         <div class="titleContent">
             <h1 class="title">Projects</h1>
             <p class="description">What I've been up to</p>
+            <div class="guidanceArrow"></div>
         </div>
         <div class="bodyContent">
                 <p>Patience is a virtue. More coming soon.</p>
