--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>lukew3</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="/images/lukew3Logo1.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/lukew3Logo1.png"/>
 
     </head>
     <body>
@@ -13,11 +13,12 @@
  
         <nav id="navbar">
             <ul class="navbar">
+                <li><img src="images/lukew3Logo1.png"></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/pages/projects/projects.html">My Projects</a></li>
-                <li><a href="/pages/futureIdeas/ideas.html">Future Ideas</a></li>
-                <li><a href="/pages/about/about.html">About</a></li>
-                <li><a href="/pages/contact/contact.html">Contact</a></li>
+                <li><a href="pages/projects/projects.html">My Projects</a></li>
+                <li><a href="pages/futureIdeas/ideas.html">Future Ideas</a></li>
+                <li><a href="pages/about/about.html">About</a></li>
+                <li><a href="pages/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
  
