--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>lukew3</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="images/lukew3Logo1.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/defaultFavicon.png"/>
 
     </head>
     <body>
@@ -13,7 +13,7 @@
  
         <nav id="navbar">
             <ul class="navbar">
-                <li><img src="images/lukew3Logo1.png"></li>
+                <li><img src="images/defaultFavicon.png"></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/projects/projects.html">My Projects</a></li>
                 <li><a href="pages/futureIdeas/ideas.html">Future Ideas</a></li>
