--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Contact</title>
-        <link rel="stylesheet" href="/pages/contact/contact.css">
+        <link rel="stylesheet" href="contact.css">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="../../images/lukew3Logo1.png"/>
+        <link rel="shortcut icon" type="image/png" href="../../images/defaultFavicon.png"/>
     </head>
     <body>
         <div class="bgImage">&nbsp;</div>
