--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="bgImage">&nbsp;</div>
- 
+
         <nav id="navbar">
             <ul class="navbar">
                 <li><img src="images/defaultFavicon.png"></li>
@@ -21,7 +21,7 @@
                 <li><a href="pages/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
- 
+
         <div class="landingTextBox">
             <h1 class="myName">lukew3</h1>
             <p class="myQuote">"The ability to simplify means to eliminate the unnecessary so that the necessary may speak." - Hans Hoffman</p>
@@ -30,6 +30,8 @@
         </div>
         <div class="mainText">
             <p>Hi, I'm Luke, a 16 year old aspiring software developer from Ohio</p>
+            <p>Testing atom connection to github</p>
         </div>
     </body>
 </html>
+<!-- Testing git on atom-->
