--- a/index.html
+++ b/index.html
@@ -4,34 +4,32 @@
         <meta charset="UTF-8">
         <title>lukew3</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="images/defaultFavicon.png"/>
-
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link rel="shortcut icon" type="image/png" href="photos/defaultFavicon.png"/>
     </head>
     <body>
-        <div class="bgImage">&nbsp;</div>
+      <div id=sidenav class=nav>
+        <a href="#" id="home">Home</a>
+        <a href="pages/examples/examples.html" id="examples">Examples</a>
+        <a href="pages/contact/contact.html" id="contact">Contact</a>
+        <a href="pages/about/about.html" id="about">About</a>
+      </div>
 
-        <nav id="navbar">
-            <ul class="navbar">
-                <li><img src="images/defaultFavicon.png"></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/projects/projects.html">My Projects</a></li>
-                <li><a href="pages/futureIdeas/ideas.html">Future Ideas</a></li>
-                <li><a href="pages/about/about.html">About</a></li>
-                <li><a href="pages/contact/contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <div id=accentbox></div>
+      <div id="text">
+        <p id="pageTitle">Luke Weiler</p>
+        <p id="pageDescription">A developer for the future</p>
+      </div>
+      <div id="content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed tempus orci. Nunc in nulla a turpis fringilla porttitor. Nunc ut velit lorem. Nulla sit amet ante aliquam, volutpat sem sed, vulputate odio. Maecenas malesuada mattis quam, id vulputate justo tincidunt at. Nulla odio dui, gravida et eros ac, finibus rutrum justo. Nunc ut augue scelerisque, dictum purus sed, eleifend mauris. Nunc massa neque, euismod non tempus ac, dapibus at libero. Mauris euismod vitae leo nec imperdiet. Pellentesque commodo tellus eu metus eleifend posuere. Aenean malesuada et enim ultricies mattis. Etiam in ullamcorper quam, sit amet convallis massa. Maecenas et volutpat orci. Proin consectetur egestas pretium.
 
-        <div class="landingTextBox">
-            <h1 class="myName">lukew3</h1>
-            <p class="myQuote">"The ability to simplify means to eliminate the unnecessary so that the necessary may speak." - Hans Hoffman</p>
-            <p class="mySlogan">It's a work in progress</p>
-            <div class="guidanceArrow"></div>
-        </div>
-        <div class="mainText">
-            <p>Hi, I'm Luke, a 16 year old aspiring software developer from Ohio</p>
-            <p>Testing atom connection to github</p>
-        </div>
+Donec pharetra, nunc sit amet rutrum fringilla, orci ipsum ultrices erat, ac lobortis libero nunc venenatis magna. Phasellus vulputate quis neque eget ornare. Donec hendrerit sodales imperdiet. Vivamus suscipit quam non felis pharetra, eu convallis urna viverra. Curabitur a gravida lacus. Aliquam lobortis turpis nec tortor accumsan consequat. Maecenas enim tellus, viverra quis tempor sit amet, consectetur eu lacus. Aliquam sit amet lorem eleifend, malesuada dui vel, egestas ex. Vivamus sapien ligula, aliquam at est vel, rhoncus blandit libero. Aenean vehicula enim vel odio consectetur, blandit pulvinar felis rutrum. Vestibulum sed eros in nibh congue fringilla vitae in risus. Pellentesque nec finibus augue. Integer sed varius nisl, id eleifend tellus. Etiam facilisis dui ut elit tincidunt, non volutpat nulla venenatis. Integer tristique feugiat magna et molestie.
+
+Curabitur condimentum felis cursus arcu accumsan porttitor. Curabitur vestibulum elit eget augue lacinia, sed feugiat arcu suscipit. Nullam viverra leo tortor, vitae fermentum erat venenatis vitae. Aliquam mollis massa vitae vulputate imperdiet. Praesent non dapibus ipsum. Quisque pellentesque risus quis diam tincidunt, luctus rhoncus enim placerat. Integer convallis quis tortor ut aliquam. Sed pulvinar sapien ac ante facilisis, vel convallis velit mollis. Nunc sollicitudin aliquet erat, id semper libero. Vivamus feugiat orci eu eros pharetra, id aliquam nulla tristique. Donec rutrum, risus mollis hendrerit aliquet, est dolor lacinia diam, eget mattis est urna ut erat. Sed dignissim volutpat sollicitudin. Mauris in odio lacus. Aliquam lacinia, nunc a imperdiet aliquam, purus ex lacinia metus, in facilisis ipsum neque sit amet turpis. Nunc justo lectus, blandit volutpat justo non, blandit interdum nulla. Cras sodales lectus id vehicula elementum.
+
+Proin non cursus sem. Nunc iaculis ex ut auctor laoreet. Quisque porta at nunc a auctor. Sed imperdiet quis purus vitae maximus. Nulla placerat sapien ut urna euismod, id consequat dolor finibus. Integer auctor at diam sit amet consequat. Integer finibus in urna eu sollicitudin. Morbi vestibulum, nibh sit amet tincidunt bibendum, dui quam porttitor erat, suscipit tincidunt ipsum nisi a augue. Pellentesque et porttitor lectus. Nunc vitae felis sed magna sagittis aliquet vitae in ex. In lobortis molestie arcu, ac vehicula dolor ornare a. Nunc erat nunc, venenatis sed neque quis, ullamcorper imperdiet tellus. Ut elementum arcu a purus consequat, non bibendum neque venenatis. Aliquam vulputate, nisl non consequat molestie, ex dui eleifend libero, at vulputate ex magna et urna. Donec condimentum feugiat sem, sed dignissim mi commodo et.
+
+Aliquam fermentum ipsum id tortor vehicula, et cursus lacus placerat. Morbi quis feugiat libero. Pellentesque eget urna neque. Sed vestibulum purus diam, ut congue mi ornare ut. Quisque pharetra purus vitae nunc volutpat porttitor. Suspendisse feugiat eleifend felis, nec facilisis eros lobortis eget. Vivamus ut laoreet felis, vel varius magna. Sed vel metus magna. Quisque non sapien condimentum, tempor dui malesuada, ultricies turpis. Integer rhoncus massa ac maximus interdum. Vestibulum vel enim in orci interdum congue nec at dolor. Suspendisse vel tempor ex. Cras quis neque varius, condimentum justo at, viverra sem. Cras nec dapibus elit, sed tristique felis.</p>
+      </div>
     </body>
 </html>
-<!-- Testing git on atom-->
