--- a/pages/examples/examples.html
+++ b/pages/examples/examples.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>lukew3</title>
+        <title>Examples</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <link rel="shortcut icon" type="image/png" href="../../photos/defaultFavicon.png"/>
@@ -10,15 +10,15 @@
     <body>
       <div id=sidenav class=nav>
         <a href="../../index.html" id="home">Home</a>
-        <a href="../examples/examples.html" id="examples">Examples</a>
+        <a href="" id="examples">Examples</a>
         <a href="../contact/contact.html" id="contact">Contact</a>
-        <a href="" id="about">About</a>
+        <a href="../about/about.html" id="about">About</a>
       </div>
 
       <div id=accentbox></div>
       <div id="text">
-        <p id="pageTitle">About me</p>
-        <p id="pageDescription">Who I am</p>
+        <p id="pageTitle">Examples</p>
+        <p id="pageDescription">What I've been up to</p>
       </div>
       <div id="content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed tempus orci. Nunc in nulla a turpis fringilla porttitor. Nunc ut velit lorem. Nulla sit amet ante aliquam, volutpat sem sed, vulputate odio. Maecenas malesuada mattis quam, id vulputate justo tincidunt at. Nulla odio dui, gravida et eros ac, finibus rutrum justo. Nunc ut augue scelerisque, dictum purus sed, eleifend mauris. Nunc massa neque, euismod non tempus ac, dapibus at libero. Mauris euismod vitae leo nec imperdiet. Pellentesque commodo tellus eu metus eleifend posuere. Aenean malesuada et enim ultricies mattis. Etiam in ullamcorper quam, sit amet convallis massa. Maecenas et volutpat orci. Proin consectetur egestas pretium.
