--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
       <div id=accentbox></div>
       <div id="text">
-        <p id="pageTitle">Luke Weiler</p>
-        <p id="pageDescription">A developer for the future</p>
+        <h1 id="pageTitle">Luke Weiler</h1>
+        <h2 id="pageDescription">A developer for the future</h2>
       </div>
       <div id="content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed tempus orci. Nunc in nulla a turpis fringilla porttitor. Nunc ut velit lorem. Nulla sit amet ante aliquam, volutpat sem sed, vulputate odio. Maecenas malesuada mattis quam, id vulputate justo tincidunt at. Nulla odio dui, gravida et eros ac, finibus rutrum justo. Nunc ut augue scelerisque, dictum purus sed, eleifend mauris. Nunc massa neque, euismod non tempus ac, dapibus at libero. Mauris euismod vitae leo nec imperdiet. Pellentesque commodo tellus eu metus eleifend posuere. Aenean malesuada et enim ultricies mattis. Etiam in ullamcorper quam, sit amet convallis massa. Maecenas et volutpat orci. Proin consectetur egestas pretium.
