--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
       <div id=sidenav class=nav>
-        <a href="#" id="home">Home</a>
-        <a href="pages/examples/examples.html" id="examples">Examples</a>
-        <a href="pages/contact/contact.html" id="contact">Contact</a>
-        <a href="pages/about/about.html" id="about">About</a>
+        <a href="" id="home" class="navElement">Home</a>
+        <a href="pages/examples/examples.html" id="examples" class="navElement">Examples</a>
+        <a href="pages/contact/contact.html" id="contact" class="navElement">Contact</a>
+        <a href="pages/about/about.html" id="about" class="navElement">About</a>
       </div>
 
       <div id=accentbox></div>
@@ -20,16 +20,21 @@
         <h1 id="pageTitle">Luke Weiler</h1>
         <h2 id="pageDescription">A developer for the future</h2>
       </div>
+      <!--
+      <img src="photos/backgroundless.png" id="myPhoto">
+      -->
       <div id="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed tempus orci. Nunc in nulla a turpis fringilla porttitor. Nunc ut velit lorem. Nulla sit amet ante aliquam, volutpat sem sed, vulputate odio. Maecenas malesuada mattis quam, id vulputate justo tincidunt at. Nulla odio dui, gravida et eros ac, finibus rutrum justo. Nunc ut augue scelerisque, dictum purus sed, eleifend mauris. Nunc massa neque, euismod non tempus ac, dapibus at libero. Mauris euismod vitae leo nec imperdiet. Pellentesque commodo tellus eu metus eleifend posuere. Aenean malesuada et enim ultricies mattis. Etiam in ullamcorper quam, sit amet convallis massa. Maecenas et volutpat orci. Proin consectetur egestas pretium.
-
-Donec pharetra, nunc sit amet rutrum fringilla, orci ipsum ultrices erat, ac lobortis libero nunc venenatis magna. Phasellus vulputate quis neque eget ornare. Donec hendrerit sodales imperdiet. Vivamus suscipit quam non felis pharetra, eu convallis urna viverra. Curabitur a gravida lacus. Aliquam lobortis turpis nec tortor accumsan consequat. Maecenas enim tellus, viverra quis tempor sit amet, consectetur eu lacus. Aliquam sit amet lorem eleifend, malesuada dui vel, egestas ex. Vivamus sapien ligula, aliquam at est vel, rhoncus blandit libero. Aenean vehicula enim vel odio consectetur, blandit pulvinar felis rutrum. Vestibulum sed eros in nibh congue fringilla vitae in risus. Pellentesque nec finibus augue. Integer sed varius nisl, id eleifend tellus. Etiam facilisis dui ut elit tincidunt, non volutpat nulla venenatis. Integer tristique feugiat magna et molestie.
-
-Curabitur condimentum felis cursus arcu accumsan porttitor. Curabitur vestibulum elit eget augue lacinia, sed feugiat arcu suscipit. Nullam viverra leo tortor, vitae fermentum erat venenatis vitae. Aliquam mollis massa vitae vulputate imperdiet. Praesent non dapibus ipsum. Quisque pellentesque risus quis diam tincidunt, luctus rhoncus enim placerat. Integer convallis quis tortor ut aliquam. Sed pulvinar sapien ac ante facilisis, vel convallis velit mollis. Nunc sollicitudin aliquet erat, id semper libero. Vivamus feugiat orci eu eros pharetra, id aliquam nulla tristique. Donec rutrum, risus mollis hendrerit aliquet, est dolor lacinia diam, eget mattis est urna ut erat. Sed dignissim volutpat sollicitudin. Mauris in odio lacus. Aliquam lacinia, nunc a imperdiet aliquam, purus ex lacinia metus, in facilisis ipsum neque sit amet turpis. Nunc justo lectus, blandit volutpat justo non, blandit interdum nulla. Cras sodales lectus id vehicula elementum.
-
-Proin non cursus sem. Nunc iaculis ex ut auctor laoreet. Quisque porta at nunc a auctor. Sed imperdiet quis purus vitae maximus. Nulla placerat sapien ut urna euismod, id consequat dolor finibus. Integer auctor at diam sit amet consequat. Integer finibus in urna eu sollicitudin. Morbi vestibulum, nibh sit amet tincidunt bibendum, dui quam porttitor erat, suscipit tincidunt ipsum nisi a augue. Pellentesque et porttitor lectus. Nunc vitae felis sed magna sagittis aliquet vitae in ex. In lobortis molestie arcu, ac vehicula dolor ornare a. Nunc erat nunc, venenatis sed neque quis, ullamcorper imperdiet tellus. Ut elementum arcu a purus consequat, non bibendum neque venenatis. Aliquam vulputate, nisl non consequat molestie, ex dui eleifend libero, at vulputate ex magna et urna. Donec condimentum feugiat sem, sed dignissim mi commodo et.
-
-Aliquam fermentum ipsum id tortor vehicula, et cursus lacus placerat. Morbi quis feugiat libero. Pellentesque eget urna neque. Sed vestibulum purus diam, ut congue mi ornare ut. Quisque pharetra purus vitae nunc volutpat porttitor. Suspendisse feugiat eleifend felis, nec facilisis eros lobortis eget. Vivamus ut laoreet felis, vel varius magna. Sed vel metus magna. Quisque non sapien condimentum, tempor dui malesuada, ultricies turpis. Integer rhoncus massa ac maximus interdum. Vestibulum vel enim in orci interdum congue nec at dolor. Suspendisse vel tempor ex. Cras quis neque varius, condimentum justo at, viverra sem. Cras nec dapibus elit, sed tristique felis.</p>
+        <p>Hi! I'm Luke, an aspiring computer programmer. I enjoy running, listening to music, and most importantly, programming! So far I have dabbled in a little bit of everything.</p>
+        <p>Some of my skills are: </p>
+        <ul>
+          <li>Front-end web development</li>
+          <li>Digital design</li>
+          <li>Photo editing</li>
+          <li>Python</li>
+          <li>Javascript</li>
+          <li>and Java</li>
+        </ul>
+        <p>I hope that you like what you see on my page! Fell free to contact me via the contact tab or at my email lukew25073@gmail.com!</p>
       </div>
     </body>
 </html>
