--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -9,10 +9,10 @@
     </head>
     <body>
       <div id=sidenav class=nav>
-        <a href="../../index.html" id="home">Home</a>
-        <a href="../examples/examples.html" id="examples">Examples</a>
-        <a href="../contact/contact.html" id="contact">Contact</a>
-        <a href="" id="about">About</a>
+        <a href="../../index.html" id="home" class="navElement">Home</a>
+        <a href="../examples/examples.html" id="examples" class="navElement">Examples</a>
+        <a href="../contact/contact.html" id="contact" class="navElement">Contact</a>
+        <a href="" id="about" class="navElement">About</a>
       </div>
 
       <div id=accentbox></div>
