--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>lukew3</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet"> 
         <link rel="shortcut icon" type="image/png" href="../../photos/defaultFavicon.png"/>
     </head>
     <body>
