--- a/pages/examples/examples.html
+++ b/pages/examples/examples.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Examples</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../../photos/defaultFavicon.png"/>
     </head>
     <body>
@@ -20,16 +20,41 @@
         <p id="pageTitle">Examples</p>
         <p id="pageDescription">What I've been up to</p>
       </div>
+
       <div id="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sed tempus orci. Nunc in nulla a turpis fringilla porttitor. Nunc ut velit lorem. Nulla sit amet ante aliquam, volutpat sem sed, vulputate odio. Maecenas malesuada mattis quam, id vulputate justo tincidunt at. Nulla odio dui, gravida et eros ac, finibus rutrum justo. Nunc ut augue scelerisque, dictum purus sed, eleifend mauris. Nunc massa neque, euismod non tempus ac, dapibus at libero. Mauris euismod vitae leo nec imperdiet. Pellentesque commodo tellus eu metus eleifend posuere. Aenean malesuada et enim ultricies mattis. Etiam in ullamcorper quam, sit amet convallis massa. Maecenas et volutpat orci. Proin consectetur egestas pretium.
+        <h1 id="jumpTo">Jump to:</h1>
+        <ul id="projectsList">
+          <a href="#pythonLogbook" class="jumpDown">
+            <li class="projectName">Python Logbook</li></a>
+          <a href="#myWebsite" class="jumpDown">
+            <li class="projectName">My Website</li>
+        </ul>
 
-Donec pharetra, nunc sit amet rutrum fringilla, orci ipsum ultrices erat, ac lobortis libero nunc venenatis magna. Phasellus vulputate quis neque eget ornare. Donec hendrerit sodales imperdiet. Vivamus suscipit quam non felis pharetra, eu convallis urna viverra. Curabitur a gravida lacus. Aliquam lobortis turpis nec tortor accumsan consequat. Maecenas enim tellus, viverra quis tempor sit amet, consectetur eu lacus. Aliquam sit amet lorem eleifend, malesuada dui vel, egestas ex. Vivamus sapien ligula, aliquam at est vel, rhoncus blandit libero. Aenean vehicula enim vel odio consectetur, blandit pulvinar felis rutrum. Vestibulum sed eros in nibh congue fringilla vitae in risus. Pellentesque nec finibus augue. Integer sed varius nisl, id eleifend tellus. Etiam facilisis dui ut elit tincidunt, non volutpat nulla venenatis. Integer tristique feugiat magna et molestie.
+        <div id="pythonLogbook" class="project">
+          <h1>Python Logbook</h1>
+          <p>I created the Python Logbook as a way for me to keep track of my thoughts and
+            accomplishments while coding. When I'm at my computer, opening a terminal is super quick
+            and easy, and I wanted to be able to create a logbook entry as quickly as possible
+            without even moving my hands from the keyboard. I made this possible by utilizing a python
+            script that would create a series of folders for me to store my entry in, depending on the date,
+            and then create a file that was named with the time. When I open up the terminal and type "newlog",
+            a series of folders are automatically created in a set directory and the terminal asks me what my
+            entry will be. I quickly type my entry and then enter to save. I can then exit the terminal and then
+            continue on with my work.</p>
+            <p>Github: <a href="https://github.com/lukew3/logbook">https://github.com/lukew3/logbook</a></p>
+        </div>
 
-Curabitur condimentum felis cursus arcu accumsan porttitor. Curabitur vestibulum elit eget augue lacinia, sed feugiat arcu suscipit. Nullam viverra leo tortor, vitae fermentum erat venenatis vitae. Aliquam mollis massa vitae vulputate imperdiet. Praesent non dapibus ipsum. Quisque pellentesque risus quis diam tincidunt, luctus rhoncus enim placerat. Integer convallis quis tortor ut aliquam. Sed pulvinar sapien ac ante facilisis, vel convallis velit mollis. Nunc sollicitudin aliquet erat, id semper libero. Vivamus feugiat orci eu eros pharetra, id aliquam nulla tristique. Donec rutrum, risus mollis hendrerit aliquet, est dolor lacinia diam, eget mattis est urna ut erat. Sed dignissim volutpat sollicitudin. Mauris in odio lacus. Aliquam lacinia, nunc a imperdiet aliquam, purus ex lacinia metus, in facilisis ipsum neque sit amet turpis. Nunc justo lectus, blandit volutpat justo non, blandit interdum nulla. Cras sodales lectus id vehicula elementum.
-
-Proin non cursus sem. Nunc iaculis ex ut auctor laoreet. Quisque porta at nunc a auctor. Sed imperdiet quis purus vitae maximus. Nulla placerat sapien ut urna euismod, id consequat dolor finibus. Integer auctor at diam sit amet consequat. Integer finibus in urna eu sollicitudin. Morbi vestibulum, nibh sit amet tincidunt bibendum, dui quam porttitor erat, suscipit tincidunt ipsum nisi a augue. Pellentesque et porttitor lectus. Nunc vitae felis sed magna sagittis aliquet vitae in ex. In lobortis molestie arcu, ac vehicula dolor ornare a. Nunc erat nunc, venenatis sed neque quis, ullamcorper imperdiet tellus. Ut elementum arcu a purus consequat, non bibendum neque venenatis. Aliquam vulputate, nisl non consequat molestie, ex dui eleifend libero, at vulputate ex magna et urna. Donec condimentum feugiat sem, sed dignissim mi commodo et.
-
-Aliquam fermentum ipsum id tortor vehicula, et cursus lacus placerat. Morbi quis feugiat libero. Pellentesque eget urna neque. Sed vestibulum purus diam, ut congue mi ornare ut. Quisque pharetra purus vitae nunc volutpat porttitor. Suspendisse feugiat eleifend felis, nec facilisis eros lobortis eget. Vivamus ut laoreet felis, vel varius magna. Sed vel metus magna. Quisque non sapien condimentum, tempor dui malesuada, ultricies turpis. Integer rhoncus massa ac maximus interdum. Vestibulum vel enim in orci interdum congue nec at dolor. Suspendisse vel tempor ex. Cras quis neque varius, condimentum justo at, viverra sem. Cras nec dapibus elit, sed tristique felis.</p>
+        <div id="myWebsite" class="project">
+          <h1>My Website</h1>
+          <p> You're already here! I really like this website and am proud of the design
+            that I created. I designed the site using Figma. This project also was the first time that
+            I used Github. While creating this website I learned how to upload files to Github and use
+            command-line git to manage my project. I learned how to use forks and how to push, pull, fetch
+            and merge. I also learned how to use github pages to host my
+            site.</p>
+            <p>Github: <a href="https://github.com/lukew3/lukew3.github.io">https://github.com/lukew3/lukew3.github.io</a></p>
+            <p>Live Site: <a href="https://lukew3.github.io/">https://lukew3.github.io/</a></p>
+        </div>
       </div>
     </body>
 </html>
