--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </head>
     <body>
       <div id=sidenav class=nav>
-        <a href="home.html" id="home" class="navElement">Home</a>
-        <a href="examples.html" id="examples" class="navElement">Examples</a>
-        <a href="contact.html" id="contact" class="navElement">Contact</a>
-        <a href="about.html" id="about" class="navElement">About</a>
+        <a href="#" id="home" class="navElement">Home</a>
+        <a href="/pages/examples.html" id="examples" class="navElement">Examples</a>
+        <a href="/pages/contact.html" id="contact" class="navElement">Contact</a>
+        <a href="/pages/about.html" id="about" class="navElement">About</a>
       </div>
 
       <div id=accentbox></div>
