--- a/pages/examples.html
+++ b/pages/examples.html
@@ -55,10 +55,10 @@
     </head>
     <body>
       <div id=sidenav class=nav>
-        <a href="/home" id="home" class="navElement">Home</a>
-        <a href="/examples" id="examples" class="navElement">Examples</a>
-        <a href="/contact" id="contact" class="navElement">Contact</a>
-        <a href="/about" id="about" class="navElement">About</a>
+        <a href="home.html" id="home" class="navElement">Home</a>
+        <a href="examples.html" id="examples" class="navElement">Examples</a>
+        <a href="contact.html" id="contact" class="navElement">Contact</a>
+        <a href="about.html" id="about" class="navElement">About</a>
       </div>
 
       <div id=accentbox></div>
