--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,10 +9,10 @@
     </head>
     <body>
       <div id=sidenav class=nav>
-        <a href="../../index.html" id="home" class="navElement">Home</a>
-        <a href="../examples/examples.html" id="examples" class="navElement">Examples</a>
-        <a href="" id="contact" class="navElement">Contact</a>
-        <a href="../about/about.html" id="about" class="navElement">About</a>
+        <a href="home.html" id="home" class="navElement">Home</a>
+        <a href="examples.html" id="examples" class="navElement">Examples</a>
+        <a href="contact.html" id="contact" class="navElement">Contact</a>
+        <a href="about.html" id="about" class="navElement">About</a>
       </div>
 
       <div id=accentbox></div>
