Working on second version

--- a/index.html
+++ b/index.html
@@ -4,52 +4,21 @@
 <title>lukew3</title>
 </head>
 <body>
-	<img class="bg" src="./cherry-blossom.png">
-	<div class="homeText">
-		<em><h1 class="nameTag">Luke Weiler</h1></em>
-		<p>
-			<a href="https://github.com/lukew3">Github</a> //
-			<a href="./lukeweiler-resume.pdf" download="lukeweiler-resume">Resume</a> // 
-			<a href="https://google.com">Contact</a>
-		</p>
+	<center>
+		<h1>Lukew3</h1>
+		<h2>Software Developer</h2>
+	</center>
+	<div>
+		<h3>Projects</h3>
+		<h4>Mathgenerator/Todarith</h4>
+		<p>My original goal for the todarith/mathgenerator projects were to create a website that contains a large database full of math problems, and then train a computer to give similar problems and their solutions to a problem that the user gave.
+		I had no experience with machine learning and decided to start generating problems. I set up a github repo and talked about my project online during Digital Ocean's Hacktoberfest.
+		Mathgenerator was created in Python, with an object oriented approach that created a Generator instance for every generator function, of which there were around 110.
+		You can find the project <a href="https://github.com/mathgenerator">here on Github</a>
+		Todarith is the website that I created to accompany the generator. I ended up abandoning the machine learning aspect of the project, but would still like to try to create it once I have the time and knowledge of how to create it.
+		You can find the site at <a href="https://todarith.ml">todarith.ml</a> and a working demo of mathgenerator at <a href="https://todarith.ml/generate">todarith.ml/generate</a></p>
 	</div>
 </body>
 <style>
-body, html {
-  height: 100%;
-  margin: 0;
-  padding: none;
-  background-color: lightblue;
-}
-
-.homeText {
-	position: absolute;
-	left: 200px;
-	top: 35vh;
-}
-
-.nameTag {
-	font-size: 40pt;
-}
-
-.bg {
-  height: 100%;
-  position: absolute;
-  overflow: none;
-  top: 0;
-  right: 0;
-  margin: 0;
-}
-
-@media screen and (max-width: 600px) {
-	.homeText {
-		left: 10vw;
-		top: 10vh;
-	}
-	.bg {
-		right: -90vw;
-		top: 20vh;
-	}
-}
 </style>
 </html>
