--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 		<p>My original goal for the todarith/mathgenerator projects were to create a website that contains a large database full of math problems, and then train a computer to give similar problems and their solutions to a problem that the user gave.
 		I had no experience with machine learning and decided to start generating problems. I set up a github repo and talked about my project online during Digital Ocean's Hacktoberfest.
 		Mathgenerator was created in Python, with an object oriented approach that created a Generator instance for every generator function, of which there were around 110.
-		You can find the project <a href="https://github.com/mathgenerator">here on Github</a>
+		You can find the project <a href="https://github.com/lukew3/mathgenerator">here on Github</a>
 		Todarith is the website that I created to accompany the generator. I ended up abandoning the machine learning aspect of the project, but would still like to try to create it once I have the time and knowledge of how to create it.
 		You can find the site at <a href="https://todarith.ml">todarith.ml</a> and a working demo of mathgenerator at <a href="https://todarith.ml/generate">todarith.ml/generate</a></p>
 	</div>
 </body>
 <style>
+	body {
+		background-image: url(xv.png);
+		background-repeat:repeat; 
+	}
 </style>
 </html>
