--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <title>lukew3</title>
 </head>
 <body>
-	<img class="bg" src="./cherry-blossom.png">
+	<div class="bgContainer">
+		<div class="bgSpacer"></div>
+		<img class="bg" src="./cherry-blossom.png">
+	</div>
 	<div class="homeText">
 		<em><h1 class="nameTag">Luke Weiler</h1></em>
 		<p>
@@ -25,20 +28,35 @@ body, html {
 .homeText {
 	position: absolute;
 	left: 200px;
-	top: 35vh;
+	top: 300px;
 }
 
 .nameTag {
 	font-size: 40pt;
 }
 
-.bg {
-  height: 100%;
+.bgContainer {
   position: absolute;
-  overflow: none;
-  top: 0;
   right: 0;
+  top: 0;
+  overflow: none;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.bgSpacer {
+  width: 230px;
+  position: static;
+  flex-shrink: 0;
+}
+.bg {
+  margin: 0;
+  position: static;
+  flex-shrink: 1;
 }
 
 @media screen and (max-width: 600px) {
@@ -46,10 +64,19 @@ body, html {
 		left: 10vw;
 		top: 10vh;
 	}
+	.bgSpacer {
+		width: 0;
+	}
+	.bg {
+		margin-top:160px;
+		margin-left: -40px;
+	}
+	/*
 	.bg {
 		right: -90vw;
 		top: 20vh;
 	}
+	*/
 }
 </style>
 </html>
