--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,8 @@
 	</div>
 	<div class="homeText">
 		<em><h1 class="nameTag">Luke Weiler</h1></em>
-		<p>
-			<a href="https://github.com/lukew3">Github</a> //
-			<a href="./lukeweiler-resume.pdf" download="lukeweiler-resume">Resume</a> // 
-			<a href="./contact.html">Contact</a>
-		</p>
+		<p><em>Email:</em> <a href="mailto:lukew25073@gmail.com">lukew25073@gmail.com</a></p>
+		<a href="./index.html">Back to home</a>
 	</div>
 </body>
 <style>
