added project-list, fixed mobile resizing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>lukew3</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 	<div class="bgContainer">
@@ -13,7 +14,8 @@
 		<p>
 			<a href="https://github.com/lukew3">Github</a> //
 			<a href="./lukeweiler-resume.pdf" download="lukeweiler-resume">Resume</a> // 
-			<a href="./contact.html">Contact</a>
+			<a href="./contact.html">Contact</a> //
+			<a href="./project-list.html">Projects</a>
 		</p>
 	</div>
 </body>
