--- a/project-list.html
+++ b/project-list.html
@@ -3,12 +3,13 @@
 <head>
 <title>lukew3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<link rel="stylesheet" href="./main.css">
 </head>
 <body>
-	<div class="projectList">
+	<div class="projectsList">
 		<em><h1 class="nameTag">Project List</h1></em>
 		<a href="./index.html">Back to home</a>
-		<div className="projectsItem" style="width: 500px">
+		<div class="projectsListItem">
 			<h3>mathgenerator</h3>
 			<p class="project_description">
         Mathgenerator is a python package that generates a wide variety of math problems with customizable results. I promoted the project and have had 64 other people make contributions to it. Through this project, I learned how to make and maintain a large-scale codebase. I learned about testing through Github Actions and managing issues and pull requests on Github.
@@ -19,7 +20,7 @@
         </div>
 
 		</div>
-		<div className="projectsItem" style="width: 500px">
+		<div class="projectsListItem">
 			<h3 class="project_title">ghlog</h3>
         <p class="project_description">
         Ghlog is a command line tool to write log, journals, or notes to a github repo from your command line. Learned how to design a command line interface and work with APIs.
@@ -29,7 +30,7 @@
         </div>
 	
 		</div>
-		<div className="projectsItem" style="width: 500px">
+		<div class="projectsListItem">
 			<h3 class="project_title">todarith.ml</h3>
         <p class="project_description">
         Todarith.ml is the website that I created to host mathgenerator and eventually, use machine learning to create, sort, and teach math problems. With this I created a Postgresql database to store math problems in. The database currently has about 1.5 million problems, almost entirely generated with mathgenerator. Learned a ton through this project including: web hosting and server deployment, databases, Flask(python web framework), front end development.
@@ -39,7 +40,7 @@
         </div>
 
 		</div>
-		<div className="projectsItem" style="width: 500px">
+		<div class="projectsListItem">
 			<h3 class="project_title">vid2slides</h3>
         <p class="project_description">
         A command line tool and python package that can take in a video recording of a slideshow and produce a pdf of the slides presented. Inspired by watching code conference presentations on Youtube that were just people reading information off of slides and wanting the slides rather than just a video. Built an accopanying website where users can upload their videos and download the resulting slides. Learned image processing and Pillow.
@@ -48,8 +49,8 @@
                 <a href="https://github.com/lukew3/vid2slides">Github</a>
                 <a href="https://vid2slides.tk">Website</a>
         </div>
-		</div>
-		<div className="projectsItem" style="width: 500px">
+		<div>
+		<div class="projectsListItem">
 			<h3 class="project_title">Recrypto</h3>
         <p class="project_description">
         A website I built with a couple of friends at Hyland Hackathon 2020. Social media type site focused on saving the earth. Didn’t know how to write and deploy a website before this so I learned Flask and the basics of web development the week before.
@@ -62,71 +63,4 @@
 		<a href="./index.html">Back to home</a>
 	</div>
 </body>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-  padding: none;
-  background-color: lightblue;
-}
-.projectList {
-	position: absolute;
-	margin: 50px;
-	padding-bottom: 50px;
-}
-
-.homeText {
-	position: absolute;
-	left: 200px;
-	top: 33%;
-}
-
-.nameTag {
-	font-size: 40pt;
-}
-
-.bgContainer {
-  position: absolute;
-  right: 0;
-  top: 0;
-  overflow: none;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  overflow: hidden;
-}
-
-.bgSpacer {
-  width: 230px;
-  position: static;
-  flex-shrink: 0;
-}
-.bg {
-  margin: 0;
-  position: static;
-  flex-shrink: 1;
-}
-
-@media screen and (max-width: 600px) {
-	.homeText {
-		left: 10vw;
-		top: 10vh;
-	}
-	.bgSpacer {
-		width: 0;
-	}
-	.bg {
-		margin-top:160px;
-		margin-left: -40px;
-	}
-	/*
-	.bg {
-		right: -90vw;
-		top: 20vh;
-	}
-	*/
-}
-</style>
 </html>
